--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,5 @@
-body
+body{font-family: sans-serif;
 
-{
     background-color:cadetblue;
 }
 h1 {
@@ -16,5 +15,14 @@ p{
 }
 .stilig{
     background-color: red;
-    color: chartreuse;
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px 10px 20px;
+    border-radius:  8px;
+    border-style: outset;
+    border-color: red;
+    
+}
+.stilig:hover{background-color: aqua;
+border-color: aqua;
 }
